# streamlit-challenge

./: .gitignore  LICENSE  README.md  data.json  example_app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
apps/: bored_api_app.py  cache_app.py  checkbox_app.py  elements_app.py  file_uploader_app.py  form_app.py  latex_app.py  layout_app.py  line_chart_app.py  multiselect_app.py  pandas_profiling_app.py  progress_app.py  query_parameters_app.py  secrets_app.py  selectbox_app.py  session_state_app.py  shap_app.py  slider_app.py  theming_app.py
