[tool.poetry]
name = "streamlit-challenge"
version = "0.1.0"
description = ""
authors = ["arnrxn <arnfried.rixen@gmail.com>"]
readme = "README.md"
packages = [{include = "streamlit_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"
streamlit-elements = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
